# DCP

./: .gitignore  COPYING  ChangeLog  Doxyfile  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  README  README-devel  bootstrap.sh  cleanup.sh  configure  configure.ac  dcp.man  dcp.spec  option_parser.ggo
include/: config.h  config.h.in  dcp.h  digest.h  index.h  io_dcp_processor.h  io_entry.h  io_index.h  io_metadata.h  io_xattr.h  pack.h  process.h
src/: Makefile.am  db_index.c  dcp.c  digest.c  entry.h  fd.c  fd.h  io_dcp_processor.c  io_dcp_processor.h  io_entry.c  io_index.c  io_metadata.c  io_xattr.c  logging.c  logging.h  main.c  pack.c  preprocess.c  process_directory.c  process_regular.c  process_special.c  process_symlink.c
src/impl/: dcp.c  dcp.h  preprocess.c  process.h  process_directory.c  process_regular.c  process_special.c  process_symlink.c
src/index/: db_index.c  index.h
src/io/: io.h  io_entry.c  io_entry.h  io_index.c  io_index.h  io_metadata.c  io_xattr.c  io_xattr.h  pack.c
